[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.27.0"
indicatif = "0.17.7"
itertools = "0.12.0"
ndarray = "0.15.6"
num = "0.4.1"
range-collections = "0.4.5"
